--- a/Alvy_template/task7.css
+++ b/Alvy_template/task7.css
@@ -10,19 +10,26 @@ body {
   width: 100%;
 }
 
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(226, 221, 221);
+}
+
 body {
-  background-color: black;
+  background-color: rgb(7, 7, 7);
 }
 
 main {
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 0rem;
 }
 main section {
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   padding: 1rem;
 }
 main section .top {
@@ -30,5 +37,50 @@ main section .top {
 }
 main section .top img {
   width: 100%;
-  border-radius: 15px;
+  border-radius: 1rem;
+}
+main section .bottom {
+  background-color: rgb(56, 55, 55);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+main section .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+main section .bottom .text h1 {
+  font-weight: 200;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+main section .bottom .text p {
+  font-weight: 100;
+  opacity: 0.6;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+}
+main section .bottom .text button {
+  width: -moz-fit-content;
+  width: fit-content;
+  border: none;
+  outline: none;
+  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+}
+
+@media (min-width: 900px) {
+  main section {
+    flex-direction: row;
+  }
+  main section .top,
+  main section .bottom {
+    width: 50%;
+  }
+  main section .bottom {
+    justify-content: space-between;
+  }
 }/*# sourceMappingURL=task7.css.map */
