--- a/Alvy_template/task7.scss
+++ b/Alvy_template/task7.scss
@@ -9,20 +9,28 @@ body {
   height: 100%;
   width: 100%;
 }
-
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(226, 221, 221);
+}
 body {
-  background-color: black;
+  background-color: rgb(7, 7, 7);
+}
+
+@mixin flex-column($gap: 0rem) {
+  display: flex;
+  flex-direction: column;
+  gap: $gap;
 }
 
 main {
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  @include flex-column(0rem);
 
   section {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    @include flex-column(1rem);
     padding: 1rem;
 
     .top {
@@ -30,7 +38,55 @@ main {
 
       img {
         width: 100%;
-        border-radius: 15px;
+        border-radius: 1rem;
+      }
+    }
+
+    .bottom {
+      background-color: rgb(56, 55, 55);
+      border-radius: 1rem;
+      padding: 1.5rem;
+      @include flex-column(3rem);
+
+      .text {
+        @include flex-column(0.7rem);
+
+        h1 {
+          font-weight: 200;
+          font-size: 2.5rem;
+          text-transform: uppercase;
+        }
+
+        p {
+          font-weight: 100;
+          opacity: 0.6;
+          font-size: 1.5rem;
+          line-height: 1.7rem;
+        }
+
+        button {
+          width: fit-content;
+          border: none;
+          outline: none;
+          padding: 0.7rem 1rem;
+          border-radius: 0.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 900px) {
+  main {
+    section {
+      flex-direction: row;
+      .top,
+      .bottom {
+        width: 50%;
+      }
+
+      .bottom {
+        justify-content: space-between;
       }
     }
   }
