--- a/Alvy_template/task7.css
+++ b/Alvy_template/task7.css
@@ -13,14 +13,20 @@ body {
 html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(226, 221, 221);
+  font-size: clamp(14px, 1.5vw, 18px);
 }
 
 body {
   background-color: rgb(7, 7, 7);
 }
 
+section {
+  max-width: 2000px;
+}
+
 main {
   width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 0rem;
@@ -64,16 +70,28 @@ main section .bottom .text p {
   line-height: 1.7rem;
 }
 main section .bottom .text button {
+  font-size: 1rem;
+  font-weight: 400;
   width: -moz-fit-content;
   width: fit-content;
   border: none;
   outline: none;
-  padding: 0.7rem 1rem;
+  padding: 1rem 0.7rem;
   border-radius: 0.5rem;
+  color: rgb(226, 221, 221);
+  background-color: transparent;
+}
+main section .bottom .text button i {
+  aspect-ratio: 1/1;
+  padding: 0.3rem;
+  margin: 0.5rem;
+  border: 1px solid white;
+  border-radius: 50%;
 }
 
 @media (min-width: 900px) {
   main section {
+    padding: 1rem 3rem;
     flex-direction: row;
   }
   main section .top,
@@ -82,5 +100,15 @@ main section .bottom .text button {
   }
   main section .bottom {
     justify-content: space-between;
+    padding: 3rem;
+  }
+  main section .bottom .text {
+    gap: 1.5rem;
+  }
+  main section .bottom .text h1 {
+    font-size: 4rem;
+  }
+  main section .bottom .text p {
+    width: 85%;
   }
 }/*# sourceMappingURL=task7.css.map */
