--- a/Alvy_template/task7.scss
+++ b/Alvy_template/task7.scss
@@ -13,6 +13,7 @@ html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(226, 221, 221);
+  font-size: clamp(14px, 1.5vw, 18px);
 }
 body {
   background-color: rgb(7, 7, 7);
@@ -24,8 +25,13 @@ body {
   gap: $gap;
 }
 
+section {
+  max-width: 2000px;
+}
+
 main {
   width: 100%;
+  align-items: center;
   @include flex-column(0rem);
 
   section {
@@ -65,11 +71,23 @@ main {
         }
 
         button {
+          font-size: 1rem;
+          font-weight: 400;
           width: fit-content;
           border: none;
           outline: none;
-          padding: 0.7rem 1rem;
+          padding: 1rem 0.7rem;
           border-radius: 0.5rem;
+          color: rgb(226, 221, 221);
+          background-color: transparent;
+
+          i {
+            aspect-ratio: 1/1;
+            padding: 0.3rem;
+            margin: 0.5rem;
+            border: 1px solid white;
+            border-radius: 50%;
+          }
         }
       }
     }
@@ -79,6 +97,7 @@ main {
 @media (min-width: 900px) {
   main {
     section {
+      padding: 1rem 3rem;
       flex-direction: row;
       .top,
       .bottom {
@@ -87,6 +106,19 @@ main {
 
       .bottom {
         justify-content: space-between;
+        padding: 3rem;
+
+        .text {
+          gap: 1.5rem;
+
+          h1 {
+            font-size: 4rem;
+          }
+
+          p {
+            width: 85%;
+          }
+        }
       }
     }
   }
