--- a/Alvy_template/task7.scss
+++ b/Alvy_template/task7.scss
@@ -16,7 +16,7 @@ html {
   font-size: clamp(14px, 1vw, 18px);
 }
 body {
-  background-color: rgb(7, 7, 7);
+  background-color: rgb(21, 21, 21);
 }
 
 @mixin flex-column($gap: 0rem) {
@@ -34,7 +34,7 @@ main {
   align-items: center;
   @include flex-column(0rem);
 
-  section {
+  section.view1 {
     width: 100%;
     @include flex-column(1rem);
     padding: 1rem;
@@ -92,11 +92,39 @@ main {
       }
     }
   }
+
+  section.view2 {
+    @include flex-column(2.5rem);
+    width: 100%;
+    padding: 1rem;
+
+    .top,
+    .bottom {
+      display: flex;
+      width: 100%;
+      justify-content: space-around;
+
+      .element {
+        text-align: center;
+        @include flex-column(0.2rem);
+
+        small {
+          font-size: 1rem;
+          opacity: 0.6;
+        }
+
+        h2 {
+          font-size: 3rem;
+          font-weight: 300;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 900px) {
   main {
-    section {
+    section.view1 {
       padding: 1rem 3rem;
       flex-direction: row;
       .top,
