--- a/Alvy_template/task7.css
+++ b/Alvy_template/task7.css
@@ -118,6 +118,88 @@ main section.view2 .bottom .element h2 {
   font-size: 3rem;
   font-weight: 300;
 }
+main section.view3 {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view3 .top {
+  width: 100%;
+}
+main section.view3 .top img {
+  width: 100%;
+  border-radius: 1rem;
+}
+main section.view3 .bottom {
+  background-color: rgb(56, 55, 55);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+main section.view3 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+main section.view3 .bottom .text h1 {
+  font-weight: 200;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+main section.view3 .bottom .text p {
+  font-weight: 100;
+  opacity: 0.6;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+}
+main section.view3 .bottom > p {
+  text-transform: uppercase;
+}
+main section.view4 {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view4 .top {
+  width: 100%;
+}
+main section.view4 .top img {
+  width: 100%;
+  border-radius: 1rem;
+}
+main section.view4 .bottom {
+  background-color: rgb(56, 55, 55);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+main section.view4 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+main section.view4 .bottom .text h1 {
+  font-weight: 200;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+main section.view4 .bottom .text p {
+  font-weight: 100;
+  opacity: 0.6;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+}
+main section.view4 .bottom > p {
+  text-transform: uppercase;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -140,5 +222,53 @@ main section.view2 .bottom .element h2 {
   }
   main section.view1 .bottom .text p {
     width: 85%;
+  }
+  main section.view2 {
+    flex-direction: row;
+    padding: 1rem 3rem;
+  }
+  main section.view3 {
+    flex-direction: row-reverse;
+    padding: 1rem 3rem;
+  }
+  main section.view3 .top,
+  main section.view3 .bottom {
+    width: 50%;
+  }
+  main section.view3 .bottom {
+    justify-content: space-between;
+    padding: 3rem;
+  }
+  main section.view3 .bottom .text h1 {
+    font-size: 3.5rem;
+  }
+  main section.view3 .bottom .phara {
+    display: flex;
+    gap: 2rem;
+  }
+  main section.view3 .bottom .phara p {
+    font-size: 1rem;
+  }
+  main section.view4 {
+    flex-direction: row;
+    padding: 1rem 3rem;
+  }
+  main section.view4 .top,
+  main section.view4 .bottom {
+    width: 50%;
+  }
+  main section.view4 .bottom {
+    justify-content: space-between;
+    padding: 3rem;
+  }
+  main section.view4 .bottom .text h1 {
+    font-size: 3.5rem;
+  }
+  main section.view4 .bottom .phara {
+    display: flex;
+    gap: 2rem;
+  }
+  main section.view4 .bottom .phara p {
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=task7.css.map */
