--- a/Flutter ecosystem/task8.scss
+++ b/Flutter ecosystem/task8.scss
@@ -9,6 +9,10 @@ body {
   height: 100%;
   width: 100%;
 }
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
 @mixin flex-column($gap: 0rem) {
   display: flex;
@@ -16,7 +20,58 @@ body {
   gap: $gap;
 }
 
+section {
+  max-width: 2000px;
+}
+
 main {
-  section .view1 {
+  @include flex-column(0 rem);
+  justify-content: center;
+  align-items: center;
+}
+
+section.view1 {
+  text-align: center;
+  // max-width: 380px;
+  @include flex-column(0 rem);
+  align-items: center;
+  background: linear-gradient(35deg, #f9d6e2, #e5f7fd 60%);
+  padding: 5rem 1rem;
+
+  .top {
+    .image {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 100%;
+        max-width: 320px;
+        height: auto;
+        object-fit: contain;
+      }
+    }
+
+    .heading {
+      margin-top: 5rem;
+
+      h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 1.1;
+      }
+    }
+  }
+
+  .bottom {
+    margin-top: 6rem;
+
+    p {
+      font-size: 2.2rem;
+      color: black;
+      line-height: 1.3;
+      font-weight: 400;
+    }
   }
 }
