--- a/Flutter ecosystem/task8.css
+++ b/Flutter ecosystem/task8.css
@@ -22,11 +22,10 @@ main {
   display: flex;
   flex-direction: column;
   gap: 0 rem;
-  justify-content: center;
-  align-items: center;
 }
 main section.view1 {
   text-align: center;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0 rem;
@@ -62,7 +61,6 @@ main section.view1 .bottom p {
   line-height: 1.3;
   font-weight: 400;
 }
-
 @media (min-width: 1150px) {
   main section.view1 {
     padding: 4rem 7rem;
